@@ -1,5 +1,5 @@
 function spm_vbm
-% VBM5 Toolbox wrapper to call vbm functions
+% VBM12 Toolbox wrapper to call vbm functions
 %_______________________________________________________________________
 % Christian Gaser
 % $Id$
@@ -126,7 +126,7 @@ h71  = uimenu(h7,...
 	'Label',	'Display surface',...
 	'Separator',	'off',...
 	'Tag',		'Display surface',...
-	'CallBack','spm_mesh_render(spm_select([1 12],''gifti'',''Select surface''));',...
+	'CallBack', 'P=spm_select([1 12],''gifti'',''Select surface''); for i=1:size(P,1), h = spm_mesh_render(deblank(P(i,:))); set(h.figure,''MenuBar'',''none'',''Toolbar'',''none'',''Name'',spm_file(P(i,:),''short40''),''NumberTitle'',''off''); spm_mesh_render(''ColourMap'',h.axis,jet); spm_mesh_render(''ColourBar'',h.axis,''on'');end',...
 	'HandleVisibility','on');
 h72  = uimenu(h7,...
 	'Label',	'Extract surface parameters',...
@@ -184,3 +184,5 @@ h11  = uimenu(h0,...
 	'Tag',		'Open VBM12 Manual',...
 	'CallBack','try,open(fullfile(spm(''dir''),''toolbox'',''vbm'',''VBM12-Manual.pdf''));end',...
 	'HandleVisibility','on');
+
+
